[package]
name = "shm"
version = "0.1.0"
edition = "2024"

[features]
default = []
serde = ["dep:serde"]
ivshmem = ["dep:ribbit"]

[dependencies]
bon = "3.6"
libc = "0.2"
log = "0.4"
ribbit = { git = "https://github.com/nwtnni/ribbit.git", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
